# studies

./: .gitignore  .gitmodules  Beamer_template.potx  README.md  random.html  random.md  random.pptx  random.xlsx  simple2.css
namedPrng/: README.md  __init__.py  examples.py  named_prng.py  test_named_prng.py  timeit_meas.py
namedPrng/sample_calls/: examples.py  timeit_meas.py
namedPrng/src/randuti/: named_prng.py
namedPrng/test/: test_named_prng.py
python/: numpy_random.py  random_test.py
randuti_dev/: .gitignore  .pylintrc  README.md  coverage.ini  requirements.txt  setup.cfg  setup.py
randuti_dev/docs/source/: conf.py  index.rst
randuti_dev/sample_calls/: examples.py  timeit_meas.py
randuti_dev/src/randuti/: __init__.py  named_prng.py  pylama.ini
randuti_dev/test/: test_named_prng.py
