[metadata]
name = randuti

version = attr: randuti.named_prng.__version__
author = Daniel Tuzes
author_email = danieltuzes@gmail.com
description = Apply a logic to assign seeds for Monte Carlo simulations
long_description = file: README.md
long_description_content_type = text/markdown

classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir=
    =src

packages=find_namespace:

install_requires=
    numpy>=1.19.1

python_requires=>=3.6

[options.packages.find]
where = src
